# MISCaseStudy

./: LICENSE  README.md
FloorManagementSystem/: README  README.md  make_celery.py  pyproject.toml  requirements.txt
FloorManagementSystem/task_app/: __init__.py  auth.py  databaseControl.py  models.py  tasks.py  views.py
FloorManagementSystem/task_app/templates/: base.html  bookings.html  home.html  login.html  myActivity.html  signup.html  workspaces.html
